# iLQR

./: controller_parameter  new_controller_parameter
src/ilqr_single_leg/: CMakeLists.txt  package.xml
src/ilqr_single_leg/config/: single_leg_jumping.yaml  single_leg_visualize.rviz
src/ilqr_single_leg/core/: CMakeLists.txt  robot parameters jump forward.info  robot parameters jump upward.info  robot parameters stand.info  single_leg_jumping_ilqr.cpp  single_leg_jumping_simulate.cpp
src/ilqr_single_leg/core/utils/: file_operate.h  read_param.h
src/ilqr_single_leg/headers/: cas_eig_transfer.h  pinocchio.h  types.h
src/ilqr_single_leg/launch/: single_leg_jumping_simulate.launch  single_leg_jumping_visualize.launch
src/ilqr_single_leg/loss_function/: CMakeLists.txt  loss_function.cpp  loss_function.h
src/ilqr_single_leg/single_leg_without_point_trace/: CMakeLists.txt  single_leg.cpp  single_leg.h  single_leg_tpl.h
src/ilqr_single_leg/urdf/: single_leg_jumping.urdf
